--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "telegraf": "^4.10.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@types/node": "^18.8.3"
   },
   "devDependencies": {
-    "@types/node": "^18.8.3"
   }
 }
